# cmake-arm-toolchain

./: .gitignore  CMakeLists.txt  README.md  main.c
cmake/: binaries.cmake  toolchain.cmake  tools.cmake
src/: CMakeLists.txt  blinky.c
src/sdk/: CMakeLists.txt
